// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesBox should render MessagesBox with 5 messages 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c6 {
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  overflow: auto;
  width: 100%;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.25rem;
  padding: 0 1.25rem;
  position: relative;
}

.c4 {
  color: #1A202C;
  font-size: 1.125rem;
  font-weight: 600;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #bee3f8;
  border: 1px solid #90cdf4;
  border-radius: 9999px;
  color: #2a4365;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0.75rem;
  left: 0.75rem;
  width: 2.5rem;
  -webkit-transition: background-color 150ms ease,color 150ms ease;
  transition: background-color 150ms ease,color 150ms ease;
}

.c3:hover {
  background-color: #90cdf4;
  border: 1px solid #63b3ed;
  color: #1A365D;
}

.c3:active {
  background-color: #bee3f8;
  border: 1px solid #90cdf4;
  color: #2c5282;
}

.c5 {
  color: #718096;
  font-size: 1rem;
  font-weight: 500;
}

.c7 {
  background-color: #E2E8F0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem;
}

.c8 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 2rem;
}

.c11 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: 2rem;
  margin-top: 0.25rem;
}

.c14 {
  color: #718096;
  font-size: 0.875rem;
  font-weight: 400;
  margin-top: 0.5rem;
}

.c16 {
  min-height: 4rem;
  overflow: hidden;
}

.c17 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem;
  width: 100%;
}

.c18 {
  border: 2px solid #CBD5E0;
  border-radius: 0.375rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.5;
  font-size: 1rem;
  padding: 0.5rem;
  resize: none;
  -webkit-transition: border 150ms ease;
  transition: border 150ms ease;
}

.c18:hover {
  border: 2px solid #A0AEC0;
}

.c18:focus {
  border: 2px solid #63b3ed;
  outline: none;
}

.c19 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #90cdf4;
  border: 2px solid #63b3ed;
  border-radius: 0.375rem;
  color: #1A365D;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  padding: 0 0.75rem;
  -webkit-transition: opacity 150ms ease,border 150ms ease,background-color 150ms ease;
  transition: opacity 150ms ease,border 150ms ease,background-color 150ms ease;
}

.c19:hover {
  background-color: #63b3ed;
  border: 2px solid #4299e1;
}

.c19:active {
  background-color: #bee3f8;
  border: 2px solid #90cdf4;
}

.c19[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.c19[aria-disabled='true']:active {
  pointer-events: none;
}

.c20 {
  display: none;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4299e1;
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 0.375rem;
  border-bottom-left-radius: 1rem;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 28rem;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4299e1;
  border-top-left-radius: 1rem;
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 0.375rem;
  border-bottom-left-radius: 1rem;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 28rem;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #4299e1;
  border-top-left-radius: 1rem;
  border-top-right-radius: 0.375rem;
  border-bottom-right-radius: 1rem;
  border-bottom-left-radius: 1rem;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.75rem 1rem;
  line-height: 1.25;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  max-width: 28rem;
}

.c10 {
  word-break: break-word;
}

@media (min-width:48em) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:48em) {
  .c3 {
    display: none;
  }
}

@media (min-width:48em) {
  .c20 {
    display: initial;
    margin-right: 0.5rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <a
        class="c3"
        title="conversation.header.backButton.title"
      >
        <svg
          fill="none"
          height="1.75rem"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1.75rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 19l-7-7m0 0l7-7m-7 7h18"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </a>
      <span
        class="c4"
      >
        Mike Hawk
      </span>
      <span
        class="c5"
        title="conversation.header.lastMessageTimestamp.title"
      >
        conversation.header.lastMessageTimestamp.text
      </span>
    </div>
    <div
      class="c6 c7"
    >
      <div
        class="c8"
        title="Thursday, January 1, 1970, 1:00 AM"
      >
        <div
          class="c9"
          data-testid="chat-bubble"
        >
          <span
            class="c10"
          >
            Hello
          </span>
        </div>
      </div>
      <div
        class="c11"
        title="Thursday, January 1, 1970, 1:00 AM"
      >
        <div
          class="c12"
          data-testid="chat-bubble"
        >
          <span
            class="c10"
          >
            Hello
          </span>
        </div>
      </div>
      <div
        class="c11"
        title="Thursday, January 1, 1970, 1:00 AM"
      >
        <div
          class="c12"
          data-testid="chat-bubble"
        >
          <span
            class="c10"
          >
            Hello
          </span>
        </div>
      </div>
      <div
        class="c11"
        title="Thursday, January 1, 1970, 1:00 AM"
      >
        <div
          class="c12"
          data-testid="chat-bubble"
        >
          <span
            class="c10"
          >
            Hello
          </span>
        </div>
      </div>
      <div
        class="c11"
        title="Thursday, January 1, 1970, 1:00 AM"
      >
        <div
          class="c13"
          data-testid="chat-bubble"
        >
          <span
            class="c10"
          >
            Hello
          </span>
        </div>
        <span
          class="c14"
        >
          Thursday, January 1, 1970, 1:00 AM
        </span>
      </div>
      <div />
    </div>
    <div
      class="c15 c16"
    >
      <form
        class="c17"
      >
        <input
          class="c18"
          data-testid="messageform-input"
          minlength="1"
          placeholder="conversation.form.input.placeholder"
          required=""
          value=""
        />
        <button
          class="c19"
          data-testid="messageform-submit"
          role="button"
          title="conversation.form.button.title"
          type="submit"
        >
          <span
            class="c20"
          >
            conversation.form.button.label
          </span>
          <svg
            fill="currentColor"
            height="1.25rem"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`MessagesBox should render MessagesBox with empty text InfoBox 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c6 {
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  overflow: auto;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.25rem;
  padding: 0 1.25rem;
  position: relative;
}

.c4 {
  color: #1A202C;
  font-size: 1.125rem;
  font-weight: 600;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #bee3f8;
  border: 1px solid #90cdf4;
  border-radius: 9999px;
  color: #2a4365;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0.75rem;
  left: 0.75rem;
  width: 2.5rem;
  -webkit-transition: background-color 150ms ease,color 150ms ease;
  transition: background-color 150ms ease,color 150ms ease;
}

.c3:hover {
  background-color: #90cdf4;
  border: 1px solid #63b3ed;
  color: #1A365D;
}

.c3:active {
  background-color: #bee3f8;
  border: 1px solid #90cdf4;
  color: #2c5282;
}

.c5 {
  color: #718096;
  font-size: 1rem;
  font-weight: 500;
}

.c7 {
  background-color: #E2E8F0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem;
}

.c11 {
  min-height: 4rem;
  overflow: hidden;
}

.c12 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem;
  width: 100%;
}

.c13 {
  border: 2px solid #CBD5E0;
  border-radius: 0.375rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.5;
  font-size: 1rem;
  padding: 0.5rem;
  resize: none;
  -webkit-transition: border 150ms ease;
  transition: border 150ms ease;
}

.c13:hover {
  border: 2px solid #A0AEC0;
}

.c13:focus {
  border: 2px solid #63b3ed;
  outline: none;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #90cdf4;
  border: 2px solid #63b3ed;
  border-radius: 0.375rem;
  color: #1A365D;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  padding: 0 0.75rem;
  -webkit-transition: opacity 150ms ease,border 150ms ease,background-color 150ms ease;
  transition: opacity 150ms ease,border 150ms ease,background-color 150ms ease;
}

.c14:hover {
  background-color: #63b3ed;
  border: 2px solid #4299e1;
}

.c14:active {
  background-color: #bee3f8;
  border: 2px solid #90cdf4;
}

.c14[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.c14[aria-disabled='true']:active {
  pointer-events: none;
}

.c15 {
  display: none;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c9 {
  background-color: rgba(0,0,0,0.04);
  border: 2px solid rgba(0,0,0,0.24);
  border-radius: 0.5rem;
  color: rgba(0,0,0,0.48);
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  max-width: 24rem;
  padding: 3rem;
  width: 100%;
}

@media (min-width:48em) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:48em) {
  .c3 {
    display: none;
  }
}

@media (min-width:48em) {
  .c15 {
    display: initial;
    margin-right: 0.5rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <a
        class="c3"
        title="conversation.header.backButton.title"
      >
        <svg
          fill="none"
          height="1.75rem"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1.75rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 19l-7-7m0 0l7-7m-7 7h18"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </a>
      <span
        class="c4"
      >
        Mike Hawk
      </span>
      <span
        class="c5"
        title="conversation.header.lastMessageTimestamp.title"
      >
        conversation.header.lastMessageTimestamp.text
      </span>
    </div>
    <div
      class="c6 c7"
    >
      <div
        class="c8"
        data-testid="infobox-empty"
      >
        <div
          class="c9"
        >
          conversation.emptyText
        </div>
      </div>
      <div />
    </div>
    <div
      class="c10 c11"
    >
      <form
        class="c12"
      >
        <input
          class="c13"
          data-testid="messageform-input"
          minlength="1"
          placeholder="conversation.form.input.placeholder"
          required=""
          value=""
        />
        <button
          class="c14"
          data-testid="messageform-submit"
          role="button"
          title="conversation.form.button.title"
          type="submit"
        >
          <span
            class="c15"
          >
            conversation.form.button.label
          </span>
          <svg
            fill="currentColor"
            height="1.25rem"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`MessagesBox should render MessagesBox with loading text InfoBox 1`] = `
.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  border-top-left-radius: 0.5rem;
  border-top-right-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c6 {
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  -webkit-flex: 1 1 0;
  -ms-flex: 1 1 0;
  flex: 1 1 0;
  overflow: auto;
  width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #E2E8F0;
  border: 1px solid #CBD5E0;
  border-bottom-left-radius: 0.5rem;
  border-bottom-right-radius: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 4rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.25rem;
  padding: 0 1.25rem;
  position: relative;
}

.c4 {
  color: #1A202C;
  font-size: 1.125rem;
  font-weight: 600;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #bee3f8;
  border: 1px solid #90cdf4;
  border-radius: 9999px;
  color: #2a4365;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 2.5rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: absolute;
  top: 0.75rem;
  left: 0.75rem;
  width: 2.5rem;
  -webkit-transition: background-color 150ms ease,color 150ms ease;
  transition: background-color 150ms ease,color 150ms ease;
}

.c3:hover {
  background-color: #90cdf4;
  border: 1px solid #63b3ed;
  color: #1A365D;
}

.c3:active {
  background-color: #bee3f8;
  border: 1px solid #90cdf4;
  color: #2c5282;
}

.c5 {
  color: #718096;
  font-size: 1rem;
  font-weight: 500;
}

.c7 {
  background-color: #E2E8F0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem;
}

.c11 {
  min-height: 4rem;
  overflow: hidden;
}

.c12 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.75rem;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.5rem;
  width: 100%;
}

.c13 {
  border: 2px solid #CBD5E0;
  border-radius: 0.375rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 1.5;
  font-size: 1rem;
  padding: 0.5rem;
  resize: none;
  -webkit-transition: border 150ms ease;
  transition: border 150ms ease;
}

.c13:hover {
  border: 2px solid #A0AEC0;
}

.c13:focus {
  border: 2px solid #63b3ed;
  outline: none;
}

.c14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #90cdf4;
  border: 2px solid #63b3ed;
  border-radius: 0.375rem;
  color: #1A365D;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  font-weight: 600;
  padding: 0 0.75rem;
  -webkit-transition: opacity 150ms ease,border 150ms ease,background-color 150ms ease;
  transition: opacity 150ms ease,border 150ms ease,background-color 150ms ease;
}

.c14:hover {
  background-color: #63b3ed;
  border: 2px solid #4299e1;
}

.c14:active {
  background-color: #bee3f8;
  border: 2px solid #90cdf4;
}

.c14[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.c14[aria-disabled='true']:active {
  pointer-events: none;
}

.c15 {
  display: none;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
}

.c9 {
  background-color: rgba(0,0,0,0.04);
  border: 2px solid rgba(0,0,0,0.24);
  border-radius: 0.5rem;
  color: rgba(0,0,0,0.48);
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  max-width: 24rem;
  padding: 3rem;
  width: 100%;
}

@media (min-width:48em) {
  .c2 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}

@media (min-width:48em) {
  .c3 {
    display: none;
  }
}

@media (min-width:48em) {
  .c15 {
    display: initial;
    margin-right: 0.5rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1 c2"
    >
      <a
        class="c3"
        title="conversation.header.backButton.title"
      >
        <svg
          fill="none"
          height="1.75rem"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1.75rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 19l-7-7m0 0l7-7m-7 7h18"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </a>
      <span
        class="c4"
      >
        Mike Hawk
      </span>
      <span
        class="c5"
        title="conversation.header.lastMessageTimestamp.title"
      >
        conversation.header.lastMessageTimestamp.text
      </span>
    </div>
    <div
      class="c6 c7"
    >
      <div
        class="c8"
        data-testid="infobox-loading"
      >
        <div
          class="c9"
        >
          conversation.loadingText
        </div>
      </div>
      <div />
    </div>
    <div
      class="c10 c11"
    >
      <form
        class="c12"
      >
        <input
          class="c13"
          data-testid="messageform-input"
          minlength="1"
          placeholder="conversation.form.input.placeholder"
          required=""
          value=""
        />
        <button
          class="c14"
          data-testid="messageform-submit"
          role="button"
          title="conversation.form.button.title"
          type="submit"
        >
          <span
            class="c15"
          >
            conversation.form.button.label
          </span>
          <svg
            fill="currentColor"
            height="1.25rem"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1.25rem"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"
            />
          </svg>
        </button>
      </form>
    </div>
  </div>
</div>
`;
